--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Authorisation</title>
     <style>
         body, html {
             background-color: #6d6464;
@@ -40,16 +40,7 @@
 <body>
         <section class="section">
         <input type="text" class="input name" id="name" placeholder="Name" value="name">
-        <input type="text" class="input group" placeholder="Group" value="group">
-        <div class="sex_choise">
-            <label><input type="radio" id="male" name="sex" value="male" class="input sex">Male</label>
-            <label><input type="radio" id="female" name="sex" value="female" class="input sex">Female</label>
-            <label><input type="radio" id="other" name="sex" value="other" class="input sex">Another</label>
-        </div>
-        <select name="" id="day" class="input birthday"></select>
-        <select name="" id="month" class="input birthmonth"></select>
-        <select name="" id="year" class="input birthyear"></select>
-        <input type="checkbox" class="isDriver">
+        <input type="password" class="input group" placeholder="Password" value="group">
         <button class="btn_submit" id="submit">Submit</button>
     </section>
 </body>
