--- a/app/templates/user/users.html
+++ b/app/templates/user/users.html
@@ -3,17 +3,14 @@
 <body>
 {% block content %}
   <section class="section">
-    <div class="get_users">
-        <a href="/user/get_users">Get users</a>
+    <div class="aciton">
+        <a href="/pages/user/get_users">Get users</a>
     </div>
-    <div class="add_user">
-        <a href="/user/add_user">Add user</a>
+    <div class="aciton">
+        <a href="/pages/user/add_user?user_id=1">Add user</a>
     </div>
-    <div class="find_user">
-        <a href="/user/find_user">Find user</a>
-    </div>
-    <div class="delete_user">
-        <a href="/user/delete_user">Delete user</a>
+    <div class="aciton">
+        <a href="/pages/user/find_user?user_id=1">Find user</a>
     </div>
   </section>
     {% endblock %}
