--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -11,7 +11,7 @@
     <section class="section">
         <div class="menu">
             <a href="user/users" class="btn_submit">Users</a>
-            <a href="tariff/tariff" class="btn_submit">Tariffs</a>
+            <a href="tariff/tariffs" class="btn_submit">Tariffs</a>
             <a href="hardware/hardwares" class="btn_submit">Hardwares</a>
             <a href="server/servers" class="btn_submit">Servers</a>
             <a href="payment/payments" class="btn_submit">Payments</a>
