--- a/app/templates/user/find_user.html
+++ b/app/templates/user/find_user.html
@@ -42,7 +42,10 @@
         </tbody>
     </table>
     <div class="action">
-        <a href="/pages/user/get_users">Get users</a>
+        <a href="/pages/user/get_users" class="btn_submit">Users</a>
+    </div>
+    <div class="action">
+        <a href="/pages/user/find_user?user_id=1111111" class="btn_submit">Find users</a>
     </div>
 </section>
 
