--- a/app/templates/user/get_users.html
+++ b/app/templates/user/get_users.html
@@ -25,8 +25,11 @@
             {% endfor %}
             </tbody>
         </table>
-        <div class="aciton">
-        <a href="/pages/user/find_user?user_id=1">Find user</a>
-        </div>
+    <div class="action">
+        <a href="/pages/user/get_users" class="btn_submit">Users</a>
+    </div>
+    <div class="action">
+        <a href="/pages/user/find_user?user_id=1111111" class="btn_submit">Find users</a>
+    </div>
     </section>
 {% endblock %}
