--- a/app/templates/user/users.html
+++ b/app/templates/user/users.html
@@ -3,14 +3,11 @@
 <body>
 {% block content %}
   <section class="section">
-    <div class="aciton">
-        <a href="/pages/user/get_users">Get users</a>
+    <div class="action">
+        <a href="/pages/user/get_users" class="btn_submit">Users</a>
     </div>
-    <div class="aciton">
-        <a href="/pages/user/add_user?user_id=1">Add user</a>
-    </div>
-    <div class="aciton">
-        <a href="/pages/user/find_user?user_id=1">Find user</a>
+    <div class="action">
+        <a href="/pages/user/find_user?user_id=1111111" class="btn_submit">Find users</a>
     </div>
   </section>
     {% endblock %}
