--- a/app/templates/hardware/delete_hardware.html
+++ b/app/templates/hardware/delete_hardware.html
@@ -24,11 +24,10 @@
     <table>
         <thead>
           <tr>
-              <th>id</th>
-              <th>cpu</th>
-              <th>capacity of ram</th>
-              <th>capacity of disk</th>
-              <th>status</th>
+            <th>id</th>
+            <th>hardware</th>
+            <th>ip address</th>
+            <th>OS</th>
           </tr>
         </thead>
         <tbody>
@@ -43,5 +42,18 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <div class="action">
+        <a href="/pages/hardware/get_hardwares" class="btn_submit">Hardwares</a>
+    </div>
+    <div class="action">
+        <a href="/pages/hardware/find_hardware?hardware_id=1111111" class="btn_submit">Find hardwares</a>
+    </div>
+    <div class="action">
+        <a href="/pages/hardware/add_hardware" class="btn_submit">Add hardware</a>
+    </div>
+    <div class="action">
+        <a href="/pages/hardware/delete_hardware?hardware_id=1111111" class="btn_submit">Delete hardware</a>
+    </div>
 </section>
 {% endblock %}
