--- a/app/templates/hardware/hardwares.html
+++ b/app/templates/hardware/hardwares.html
@@ -4,16 +4,16 @@
 {% block content %}
   <section class="section">
     <div class="action">
-        <a href="/pages/hardware/get_hardwares">Get hardwares</a>
+        <a href="/pages/hardware/get_hardwares" class="btn_submit">Hardwares</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/add_hardware">Add hardware</a>
+        <a href="/pages/hardware/find_hardware?hardware_id=1111111" class="btn_submit">Find hardwares</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/find_hardware?hardware_id=1">Find hardware</a>
+        <a href="/pages/hardware/add_hardware" class="btn_submit">Add hardware</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/delete_hardware">Delete hardware</a>
+        <a href="/pages/hardware/delete_hardware?hardware_id=1111111" class="btn_submit">Delete hardware</a>
     </div>
   </section>
     {% endblock %}
