--- a/app/templates/server/get_servers.html
+++ b/app/templates/server/get_servers.html
@@ -7,32 +7,33 @@
             <thead>
                 <tr>
                     <th>id</th>
-                    <th>name</th>
-                    <th>email</th>
-                    <th>server</th>
-                    <th>created_at</th>
+                    <th>hardware</th>
+                    <th>ip address</th>
+                    <th>OS</th>
                 </tr>
             </thead>
             <tbody>
-            {% for us in server %}
+            {% for serv in server %}
                 <tr>
-                    <th>{{ us.id }}</th>
-                    <td>{{ us.name }}</td>
-                    <td>{{ us.email }}</td>
-                    <td>{{ us.server_id }}</td>
-                    <td>{{ us.created_at }}</td>
+                    <th>{{ serv.id }}</th>
+                    <td>{{ serv.hardware_id }}</td>
+                    <td>{{ serv.ip_address }}</td>
+                    <td>{{ serv.operating_system }}</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
-        <div class="aciton">
-        <a href="/server/add_server">Add server</a>
-        </div>
-        <div class="aciton">
-        <a href="/server/find_server">Find server</a>
-        </div>
-        <div class="aciton">
-        <a href="/server/delete_server">Delete server</a>
-        </div>
+    <div class="action">
+        <a href="/pages/server/get_servers" class="btn_submit">Servers</a>
+    </div>
+    <div class="action">
+        <a href="/pages/server/find_server?server_id=1111111" class="btn_submit">Find servers</a>
+    </div>
+    <div class="action">
+        <a href="/pages/server/add_server" class="btn_submit">Add server</a>
+    </div>
+    <div class="action">
+        <a href="/pages/server/delete_server?server_id=1111111" class="btn_submit">Delete server</a>
+    </div>
     </section>
 {% endblock %}
