--- a/app/templates/tariff/delete_tariff.html
+++ b/app/templates/tariff/delete_tariff.html
@@ -1,46 +1,57 @@
 {% extends "base.html" %}
 {% block head %}
 <script>
-    const delete_user = () => {
-        const deleted_user = document.getElementById("name").value;
-        window.location.href = `/pages/user/find_user?user_id=${deleted_user}`;
+    const search_for_tariff = () => {
+        const searchInputValue = document.getElementById("name").value;
+        window.location.href = `/pages/tariff/delete_tariff?tariff_id=${searchInputValue}`;
     }
 </script>
 {% endblock %}
+<body>
 {% block content %}
+
 <section class="section">
-    <p class="start">Delete user</p>
+    <p class="start">Delete tariff</p>
     <div class="name">
         <p class="name">
-            Name
+            Hardware ID
         </p>
         <input type="text" id="name" name="name" required>
     </div>
     <div class="btn_confirm">
-        <button class="confirm" onclick="delete_user()">Confirm</button>
+        <button class="confirm" onclick="search_for_tariff()">Confirm</button>
     </div>
     <table>
         <thead>
           <tr>
-              <th>id</th>
-              <th>name</th>
-              <th>email</th>
-              <th>tariff</th>
-              <th>created_at</th>
+                <th>id</th>
+                <th>price</th>
+                <th>description</th>
+                <th>server_id</th>
           </tr>
         </thead>
         <tbody>
-             {% for us in user %}
+             {% for tar in tariff %}
                 <tr>
-                    <th>{{ us.id }}</th>
-                    <td>{{ us.name }}</td>
-                    <td>{{ us.email }}</td>
-                    <td>{{ us.tariff_id }}</td>
-                    <td>{{ us.created_at }}</td>
+                    <th>{{ tar.id }}</th>
+                    <td>{{ tar.price }}</td>
+                    <td>{{ tar.description }}</td>
+                    <td>{{ tar.server_id }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
+    <div class="action">
+        <a href="/pages/tariff/get_tariffs" class="btn_submit">Tariffs</a>
+    </div>
+    <div class="action">
+        <a href="/pages/tariff/get_tariffs" class="btn_submit">Get tariffs</a>
+    </div>
+    <div class="action">
+        <a href="/pages/tariff/add_tariff" class="btn_submit">Add tariff</a>
+    </div>
+    <div class="action">
+        <a href="/pages/tariff/find_tariff?tariff_id=1111111" class="btn_submit">Find tariff</a>
+    </div>
 </section>
-
 {% endblock %}
