--- a/app/templates/tariff/find_tariff.html
+++ b/app/templates/tariff/find_tariff.html
@@ -12,7 +12,7 @@
     <p class="start">Find tariff</p>
     <div class="name">
         <p class="name">
-            Name
+            Tariff id
         </p>
         <input type="text" id="name" name="name" required>
     </div>
@@ -23,24 +23,34 @@
         <thead>
           <tr>
               <th>id</th>
-              <th>name</th>
-              <th>email</th>
-              <th>tariff</th>
-              <th>created_at</th>
+              <th>price</th>
+              <th>description</th>
+              <th>server_id</th>
           </tr>
         </thead>
         <tbody>
              {% for us in tariff %}
                 <tr>
                     <th>{{ us.id }}</th>
-                    <td>{{ us.name }}</td>
-                    <td>{{ us.email }}</td>
-                    <td>{{ us.tariff_id }}</td>
-                    <td>{{ us.created_at }}</td>
+                    <td>{{ us.price }}</td>
+                    <td>{{ us.description }}</td>
+                    <td>{{ us.server_id }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
+    <div class="action">
+        <a href="/pages/tariff/get_tariffs" class="btn_submit">Tariffs</a>
+    </div>
+    <div class="action">
+        <a href="/pages/tariff/get_tariffs" class="btn_submit">Get tariffs</a>
+    </div>
+    <div class="action">
+        <a href="/pages/tariff/add_tariff" class="btn_submit">Add tariff</a>
+    </div>
+    <div class="action">
+        <a href="/pages/tariff/delete_tariff?tariff_id=1111111" class="btn_submit">Delete tariff</a>
+    </div>
 </section>
 
 {% endblock %}
