--- a/app/templates/tariff/tariffs.html
+++ b/app/templates/tariff/tariffs.html
@@ -4,18 +4,16 @@
 {% block content %}
   <section class="section">
     <div class="action">
-        <a href="/tariffs/get_tariffs?tariffs_id=1">Get tariffss</a>
+        <a href="/pages/tariff/get_tariffs">Get tariffs</a>
     </div>
     <div class="action">
-        <a href="/tariffs/add_tariffs">Add tariffs</a>
+        <a href="/pages/tariff/add_tariff">Add tariff</a>
     </div>
     <div class="action">
-        <a href="/tariffs/find_tariffs">Find tariffs</a>
+        <a href="/pages/tariff/find_tariff?tariff_id=11111">Find tariff</a>
     </div>
     <div class="action">
-        <a href="/tariffs/delete_tariffs">Delete tariffs</a>
+        <a href="/pages/tariff/delete_tariff?tariff_id=1111111">Delete tariff</a>
     </div>
   </section>
     {% endblock %}
-</body>
-</html>
