--- a/app/templates/hardware/find_hardware.html
+++ b/app/templates/hardware/find_hardware.html
@@ -42,10 +42,10 @@
         </tbody>
     </table>
     <div class="action">
-        <a href="/pages/hardware/get_hardwares" class="btn_submit">Hardwares</a>
+        <a href="/pages/hardware/hardwares" class="btn_submit">Hardwares</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/find_hardware?hardware_id=1111111" class="btn_submit">Find hardwares</a>
+        <a href="/pages/hardware/get_hardwares" class="btn_submit">Find hardware</a>
     </div>
     <div class="action">
         <a href="/pages/hardware/add_hardware" class="btn_submit">Add hardware</a>
