--- a/app/templates/payment/payments.html
+++ b/app/templates/payment/payments.html
@@ -4,10 +4,10 @@
 {% block content %}
   <section class="section">
     <div class="action">
-        <a href="/pages/payment/payments" class="btn_submit">Payments</a>
+        <a href="/pages/payment/get_payments" class="btn_submit">Get all payments</a>
     </div>
     <div class="action">
-        <a href="/pages/payment/find_payment?payment_id=1111111" class="btn_submit">Find payments</a>
+        <a href="/pages/payment/find_payment?payment_id=1111111" class="btn_submit">Find payment</a>
     </div>
     <div class="action">
         <a href="/pages/payment/add_payment" class="btn_submit">Add payment</a>
