--- a/app/templates/hardware/add_hardware.html
+++ b/app/templates/hardware/add_hardware.html
@@ -1,39 +1,18 @@
 {% extends "base.html" %}
 {% block head %}
 <script>
-  const send_value = () => {
-      try {
-          id = document.getElementById("id")
-          cpu = document.getElementById("cpu")
-          capacity_of_ram = document.getElementById("capacity_of_ram")
-          capacity_of_disk = document.getElementById("capacity_of_disk")
-          status = document.getElementById("status")
-          data = {
-              "id": id,
-              "cpu": cpu,
-              "capacity_of_ram": capacity_of_ram,
-              "capacity_of_disk": capacity_of_disk,
-              "status": status
-          }
-        const response = async () => await fetch('/hardware', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(data)
-        });
-
-        // Проверяем статус ответа
-        if (response.ok) {
-          const result = async () => await response.json();
-          console.log(result); // Обрабатываем ответ от сервера
-        } else {
-          console.error('Ошибка при отправке данных');
-        }
-      } catch (error) {
-        console.error('Ошибка:', error);
-      }
-  }
+    const send_value = () => {
+        const hardware_id = document.getElementById("name").value;
+        const hardware_cpu = document.getElementById("cpu").value;
+        const hardware_capacity_of_ram = document.getElementById("capacity_of_ram").value;
+        const hardware_capacity_of_disk = document.getElementById("capacity_of_disk").value;
+        const hardware_status = document.getElementById("status").value;
+        window.location.href = `/pages/hardware/add_hardware?hardware_id=${hardware_id}_
+                                hardware_cpu=${hardware_cpu}_
+                                hardware_capacity_of_ram=${hardware_capacity_of_ram}_
+                                hardware_capacity_of_disk=${hardware_capacity_of_disk}_
+                                hardware_status=${hardware_status}`;
+    }
 </script>
 {% endblock %}
 {% block content %}
@@ -72,6 +51,28 @@
     <div class="btn_confirm">
         <button class="confirm" onclick="send_value()">Confirm</button>
     </div>
+    <table>
+    <thead>
+      <tr>
+        <th>id</th>
+        <th>cpu</th>
+        <th>capacity_of_ram</th>
+        <th>capacity_of_disk</th>
+        <th>status</th>
+      </tr>
+    </thead>
+    <tbody>
+         {% for hard in hardware %}
+            <tr>
+                <th>{{ hard.id }}</th>
+                <td>{{ hard.cpu }}</td>
+                <td>{{ hard.capacity_of_ram }}</td>
+                <td>{{ hard.capacity_of_disk }}</td>
+                <td>{{ hard.status }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+    </table>
     <div class="action">
         <a href="/pages/hardware/get_hardwares" class="btn_submit">Hardwares</a>
     </div>
