--- a/app/templates/hardware/delete_hardware.html
+++ b/app/templates/hardware/delete_hardware.html
@@ -44,16 +44,16 @@
     </table>
 
     <div class="action">
-        <a href="/pages/hardware/get_hardwares" class="btn_submit">Hardwares</a>
+        <a href="/pages/hardware/hardwares" class="btn_submit">Hardwares</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/find_hardware?hardware_id=1111111" class="btn_submit">Find hardwares</a>
+        <a href="/pages/hardware/get_hardware" class="btn_submit">Get all hardwares</a>
+    </div>
+    <div class="action">
+        <a href="/pages/hardware/find_hardware?hardware_id=1111111" class="btn_submit">Find hardware</a>
     </div>
     <div class="action">
         <a href="/pages/hardware/add_hardware" class="btn_submit">Add hardware</a>
-    </div>
-    <div class="action">
-        <a href="/pages/hardware/delete_hardware?hardware_id=1111111" class="btn_submit">Delete hardware</a>
     </div>
 </section>
 {% endblock %}
