--- a/app/templates/hardware/hardwares.html
+++ b/app/templates/hardware/hardwares.html
@@ -4,13 +4,13 @@
 {% block content %}
   <section class="section">
     <div class="action">
-        <a href="/pages/hardware/get_hardwares" class="btn_submit">Hardwares</a>
+        <a href="/pages/hardware/get_hardwares" class="btn_submit">Get all hardwares</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/find_hardware?hardware_id=1111111" class="btn_submit">Find hardwares</a>
+        <a href="/pages/hardware/find_hardware?hardware_id=1111111" class="btn_submit">Find hardware</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/add_hardware" class="btn_submit">Add hardware</a>
+        <a href="/pages/hardware/add_hardware?hardware_id=0_hardware_cpu=y_hardware_capacity_of_ram=100_hardware_capacity_of_disk=100_hardware_status=work" class="btn_submit">Add hardware</a>
     </div>
     <div class="action">
         <a href="/pages/hardware/delete_hardware?hardware_id=1111111" class="btn_submit">Delete hardware</a>
