--- a/app/templates/payment/delete_payment.html
+++ b/app/templates/payment/delete_payment.html
@@ -48,13 +48,13 @@
         <a href="/pages/payment/payments" class="btn_submit">Payments</a>
     </div>
     <div class="action">
-        <a href="/pages/payment/find_payment?payment_id=1111111" class="btn_submit">Find payments</a>
+        <a href="/pages/payment/get_payments" class="btn_submit">Get all payments</a>
+    </div>
+    <div class="action">
+        <a href="/pages/payment/find_payment?payment_id=1111111" class="btn_submit">Find payment</a>
     </div>
     <div class="action">
         <a href="/pages/payment/add_payment" class="btn_submit">Add payment</a>
-    </div>
-    <div class="action">
-        <a href="/pages/payment/delete_payment?payment_id=1111111" class="btn_submit">Delete payment</a>
     </div>
 </section>
 {% endblock %}
