--- a/app/templates/payment/find_payment.html
+++ b/app/templates/payment/find_payment.html
@@ -45,7 +45,7 @@
         <a href="/pages/payment/payments" class="btn_submit">Payments</a>
     </div>
     <div class="action">
-        <a href="/pages/payment/find_payment?payment_id=1111111" class="btn_submit">Find payments</a>
+        <a href="/pages/payment/get_payments" class="btn_submit">Get all payments</a>
     </div>
     <div class="action">
         <a href="/pages/payment/add_payment" class="btn_submit">Add payment</a>
