--- a/app/templates/payment/get_payments.html
+++ b/app/templates/payment/get_payments.html
@@ -26,10 +26,10 @@
             </tbody>
         </table>
     <div class="action">
-        <a href="/pages/payment/payments" class="btn_submit">Payments</a>
+        <a href="/pages/payment/payments" class="btn_submit">Get all payments</a>
     </div>
     <div class="action">
-        <a href="/pages/payment/find_payment?payment_id=1111111" class="btn_submit">Find payments</a>
+        <a href="/pages/payment/find_payment?payment_id=1111111" class="btn_submit">Find payment</a>
     </div>
     <div class="action">
         <a href="/pages/payment/add_payment" class="btn_submit">Add payment</a>
