--- a/app/templates/user/delete_user.html
+++ b/app/templates/user/delete_user.html
@@ -3,13 +3,13 @@
 <script>
     const search_for_user = () => {
         const searchInputValue = document.getElementById("name").value;
-        window.location.href = `/pages/user/find_user?user_id=${searchInputValue}`;
+        window.location.href = `/pages/user/delete_user?user_id=${searchInputValue}`;
     }
 </script>
 {% endblock %}
 {% block content %}
 <section class="section">
-    <p class="start">Find user</p>
+    <p class="start">Delete user</p>
     <div class="name">
         <p class="name">
             User id
@@ -46,9 +46,6 @@
     </div>
     <div class="action">
         <a href="/pages/user/find_user?user_id=1111111" class="btn_submit">Find users</a>
-    </div>
-    <div class="action">
-        <a href="/pages/user/delete_user?user_id=1111111" class="btn_submit">Delete users</a>
     </div>
 </section>
 
