--- a/app/templates/user/get_users.html
+++ b/app/templates/user/get_users.html
@@ -26,10 +26,13 @@
             </tbody>
         </table>
     <div class="action">
-        <a href="/pages/user/get_users" class="btn_submit">Users</a>
+        <a href="/pages/user/users" class="btn_submit">Users</a>
     </div>
     <div class="action">
         <a href="/pages/user/find_user?user_id=1111111" class="btn_submit">Find users</a>
+    </div>
+    <div class="action">
+        <a href="/pages/user/delete_user?user_id=1111111" class="btn_submit">Delete users</a>
     </div>
     </section>
 {% endblock %}
