--- a/app/templates/hardware/add_hardware.html
+++ b/app/templates/hardware/add_hardware.html
@@ -31,7 +31,7 @@
         <input type="text" id="cpu" name="cpu" required>
     </div>
     <div class="action">
-        <p class="email">
+        <p class="text">
             capacity of ram
         </p>
         <input type="text" id="capacity_of_ram" name="capacity of ram" required>
