--- a/app/templates/hardware/find_hardware.html
+++ b/app/templates/hardware/find_hardware.html
@@ -48,7 +48,7 @@
         <a href="/pages/hardware/get_hardwares" class="btn_submit">Find hardware</a>
     </div>
     <div class="action">
-        <a href="/pages/hardware/add_hardware" class="btn_submit">Add hardware</a>
+        <a href="/pages/hardware/add_hardware?hardware_id=0_hardware_cpu=5700u_hardware_capacity_of_ram=100_hardware_capacity_of_disk=100_hardware_status=work" class="btn_submit">Add hardware</a>
     </div>
     <div class="action">
         <a href="/pages/hardware/delete_hardware?hardware_id=1111111" class="btn_submit">Delete hardware</a>
