--- a/app/templates/user/delete_user.html
+++ b/app/templates/user/delete_user.html
@@ -42,7 +42,13 @@
         </tbody>
     </table>
     <div class="action">
-        <a href="/pages/user/get_users" class="btn_submit">Users</a>
+        <a href="/pages/user/users" class="btn_submit">Users</a>
+    </div>
+    <div class="action">
+        <a href="/pages/user/get_users" class="btn_submit">Get all Users</a>
+    </div>
+    <div class="action">
+        <a href="/pages/user/add_user?user_id=1111111_user_name=root_user_email=example.com_tariff_id=0" class="btn_submit">Add users</a>
     </div>
     <div class="action">
         <a href="/pages/user/find_user?user_id=1111111" class="btn_submit">Find users</a>
